Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <button onclick="ativarNotificacoes()" class="w-full bg-[#E8B923] text-[#000814] py-2 rounded-lg font-black text-[10px] uppercase">ATIVAR NOTIFICAÇÕES</button>
             </div>
 
-            <button onclick="showSection('projeto')" class="w-full bg-[#E8B923] text-[#000814] py-4 rounded-xl font-black uppercase text-xs">CONHEÇA NOSSOS PROJETOS</button>
+            <button onclick="showSection('projeto')" ...>INSTALAR</button> class="w-full bg-[#E8B923] text-[#000814] py-4 rounded-xl font-black uppercase text-xs">CONHEÇA NOSSOS PROJETOS</button>
         </div>
     </div>
 
@@ -335,11 +335,12 @@
         window.open(url, '_blank');
     }
 
-    window.onload = () => { initQuiz(); carregarDevocional(); verificarPermissaoNotificacao(); };
+   
     window.onload = () => { initQuiz(); carregarDevocional(); verificarPermissaoNotificacao(); };
   </script>
 </body>
 </html>
+
 
 
 
