--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <button onclick="ativarNotificacoes()" class="w-full bg-[#E8B923] text-[#000814] py-2 rounded-lg font-black text-[10px] uppercase">ATIVAR NOTIFICAÇÕES</button>
             </div>
 
-            <button onclick="showSection('projeto')" ...>INSTALAR</button> class="w-full bg-[#E8B923] text-[#000814] py-4 rounded-xl font-black uppercase text-xs">CONHEÇA NOSSOS PROJETOS</button>
+            <button onclick="showSection('INSTALAR')" >
         </div>
     </div>
 
@@ -168,6 +168,42 @@
         </div>
     </div>
 <div id="projeto" class="section text-center">
+  <div id="projeto" class="section text-center">
+    <div class="bg-gradient-to-b from-[#15803D]/30 to-transparent p-6 rounded-3xl border border-[#15803D]/50 mb-8">
+        <h2 class="text-[#E8B923] text-2xl font-black uppercase italic mb-1">Como Instalar</h2>
+        <p class="text-[10px] text-white/50 tracking-[0.2em] uppercase font-bold">App Missão Peru</p>
+    </div>
+
+    <div class="space-y-4 text-left">
+        <div class="bg-white/5 p-5 rounded-2xl border border-white/10">
+            <h3 class="text-[#E8B923] font-bold text-sm flex items-center gap-2 mb-3">
+                <span class="text-xl">🤖</span> NO ANDROID (CHROME)
+            </h3>
+            <p class="text-xs text-gray-300 leading-relaxed">
+                1. Toque nos <b>três pontinhos (⋮)</b> no canto superior direito.<br>
+                2. Escolha <b>"Instalar aplicativo"</b> ou "Adicionar à tela inicial".<br>
+                3. Confirme em "Instalar".
+            </p>
+        </div>
+
+        <div class="bg-white/5 p-5 rounded-2xl border border-white/10">
+            <h3 class="text-[#E8B923] font-bold text-sm flex items-center gap-2 mb-3">
+                <span class="text-xl">🍎</span> NO IPHONE (SAFARI)
+            </h3>
+            <p class="text-xs text-gray-300 leading-relaxed">
+                1. Toque no ícone de <b>Compartilhar</b> (quadrado com uma seta para cima).<br>
+                2. Role a lista para baixo e toque em <b>"Adicionar à Tela de Início"</b>.<br>
+                3. Toque em "Adicionar" no canto superior.
+            </p>
+        </div>
+    </div>
+    
+    <div class="mt-8">
+        <button onclick="showSection('home')" class="w-full bg-[#15803D] text-white py-4 rounded-xl font-black uppercase text-xs">
+            VOLTAR AO INÍCIO
+        </button>
+    </div>
+</div>
     <div class="bg-gradient-to-b from-[#15803D]/30 to-transparent p-6 rounded-3xl border border-[#15803D]/50 mb-8">
         <h2 class="text-[#E8B923] text-2xl font-black uppercase italic mb-1">Como Instalar</h2>
         <p class="text-[10px] text-white/50 tracking-[0.2em] uppercase font-bold">App Missão Peru</p>
@@ -340,6 +376,7 @@
   </script>
 </body>
 </html>
+
 
 
 
