Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -199,11 +199,14 @@
         <p class="text-[10px] text-[#E8B923] font-bold text-center italic uppercase">
             "Uma ferramenta para conectar corações à obra missionária em Tacna."
         </p>
-       <div class="mt-8">
+      <div class="mt-8">
         <button onclick="showSection('home')" class="w-full bg-[#15803D] text-white py-4 rounded-xl font-black uppercase text-xs">
             VOLTAR AO INÍCIO
         </button>
+  </div>
+  </div></main>  
     </div>
+    
     </div>
     <div class="space-y-4 text-left">
         <div class="bg-white/5 p-5 rounded-2xl border border-white/10">
@@ -372,6 +375,7 @@
   </script>
 </body>
 </html>
+
 
 
 
