--- a/index.html
+++ b/index.html
@@ -4,199 +4,113 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Missão Peru</title>
-    
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#15803D">
-    <link rel="apple-touch-icon" href="logo-missao-peru.png">
-    <link rel="icon" type="image/png" href="logo-missao-peru.png">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        body { font-family: system-ui, sans-serif; background: #000814; color: white; scroll-behavior: smooth; overflow-x: hidden; }
+        body { font-family: system-ui, sans-serif; background: #000814; color: white; overflow-x: hidden; }
         .section { display: none; padding-bottom: 100px; }
         .active { display: block; animation: fadeIn 0.3s ease-out; }
-        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
-        #navbar { position: fixed; bottom: 0; left: 0; right: 0; background: #000814; border-top: 1px solid #15803D; display: flex; justify-content: space-around; padding: 12px 5px; z-index: 50; }
-        .nav-btn { display: flex; flex-direction: column; align-items: center; color: rgba(255,255,255,0.5); width: 16%; }
+        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+        #navbar { position: fixed; bottom: 0; left: 0; right: 0; background: #000814; border-top: 1px solid rgba(255,255,255,0.1); display: flex; justify-content: space-around; padding: 12px 5px; z-index: 50; }
+        .nav-btn { display: flex; flex-direction: column; align-items: center; color: rgba(255,255,255,0.5); width: 18%; font-size: 8px; font-weight: 900; text-transform: uppercase; }
         .nav-active { color: #E8B923 !important; }
-        .nav-btn span { font-size: 8px; font-weight: 900; text-transform: uppercase; text-align: center; line-height: 1.2; }
-        .quiz-btn { background: #0074D9; width: 100%; padding: 1rem; border-radius: 0.75rem; font-weight: bold; margin-bottom: 0.5rem; transition: 0.3s; }
+        .card { background: rgba(255,255,255,0.05); border: 1px solid rgba(255,255,255,0.1); border-radius: 24px; padding: 20px; }
     </style>
 </head>
-<body class="min-h-screen">
-
-    <div class="bg-gradient-to-b from-[#15803D] to-[#000814] py-6 text-center shadow-lg">
-        <img src="logo-missao-peru.png" class="mx-auto w-24 h-24 rounded-full border-4 border-[#E8B923] mb-2 shadow-2xl">
-        <h1 class="text-xl font-bold text-[#E8B923]">Missão Peru</h1>
-        <div class="flex justify-center gap-4 mt-2 text-[10px] font-bold uppercase tracking-widest text-white/80">
-            <span>🪙 <span id="moedas">0</span></span>
-            <span>❤️ <span id="vidas">3</span></span>
-            <span>⭐ <span id="pontos">0</span></span>
+<body>
+    <header class="p-6 text-center border-b border-white/5">
+        <img src="logo-missao-peru.png" class="w-20 h-20 rounded-full mx-auto mb-2 border-2 border-[#E8B923]">
+        <h1 class="text-xl font-black italic text-[#E8B923] uppercase">Missão Peru</h1>
+        <div class="flex justify-center gap-4 mt-2 text-[10px] font-bold text-white/40">
+            <span>🪙 <span id="moedas">0</span></span> <span>❤️ <span id="vidas">3</span></span> <span>🏆 <span id="pontos">0</span></span>
         </div>
-    </div>
+    </header>
 
-    <main class="p-6 max-w-2xl mx-auto">
+    <main class="p-4 max-w-md mx-auto">
         <div id="home" class="section active text-center">
-            <div class="bg-white/5 p-8 rounded-3xl border border-white/10 shadow-xl">
-                <h2 class="text-[#E8B923] text-xl font-black uppercase mb-6 italic">Apresentação</h2>
-                <div class="text-sm text-gray-200 leading-relaxed text-justify space-y-4 mb-8">
-                    <p>Missão Peru é mais do que um aplicativo — é um chamado.</p>
-                    <p>Aqui você acompanha projetos, intercede e se envolve com o que o Senhor está fazendo em Tacna.</p>
-                    <p class="font-bold italic text-[#E8B923] text-center">Este não é apenas um espaço digital. É um altar virtual de compromisso.</p>
-                </div>
-                <div id="notif-banner" class="mb-6 p-4 bg-[#E8B923]/10 border border-[#E8B923]/30 rounded-2xl hidden">
-                    <p class="text-[10px] font-bold uppercase text-[#E8B923] mb-2">🔔 Receber Alerta Diário?</p>
-                    <button onclick="ativarNotificacoes()" class="w-full bg-[#E8B923] text-[#000814] py-2 rounded-lg font-black text-[10px] uppercase">ATIVAR NOTIFICAÇÕES</button>
-                </div>
-                <button onclick="showSection('projeto')" class="w-full bg-[#15803D] text-white py-4 rounded-xl font-black uppercase text-xs shadow-lg">COMO INSTALAR O APP</button>
+            <div class="card mb-6">
+                <h2 class="text-[#E8B923] font-black uppercase mb-4">Apresentação</h2>
+                <p class="text-sm text-gray-300">Conectando corações à obra missionária em Tacna.</p>
             </div>
+            <button onclick="showSection('projeto')" class="w-full bg-[#15803D] py-4 rounded-xl font-black text-xs uppercase shadow-lg">Como Instalar o App</button>
         </div>
 
         <div id="palavra" class="section text-center">
-            <div class="bg-gradient-to-b from-[#15803D]/30 to-transparent p-6 rounded-3xl border border-[#15803D]/50 mb-8">
-                <h2 class="text-[#E8B923] text-2xl font-black uppercase italic mb-1">Devocional Diário</h2>
-                <p id="devocional-data" class="text-[10px] text-white/50 tracking-widest uppercase font-bold">Carregando...</p>
+            <div class="card mb-6 border-l-4 border-[#E8B923] text-left">
+                <p id="dev-data" class="text-[10px] text-white/50 uppercase font-bold mb-2"></p>
+                <h3 id="dev-tema" class="text-[#E8B923] font-black uppercase text-sm mb-2 italic"></h3>
+                <p id="dev-intro" class="text-xs text-gray-300 mb-4"></p>
+                <p id="dev-ensino" class="text-xs text-gray-300 italic mb-4 border-t border-white/10 pt-4"></p>
+                <p id="dev-aplicacao" class="text-xs text-gray-300 border-t border-white/10 pt-4"></p>
             </div>
-            <div class="space-y-6 text-left">
-                <div class="bg-white/5 p-6 rounded-2xl border-l-4 border-[#E8B923]">
-                    <h3 class="text-[#E8B923] font-black uppercase text-xs mb-2 italic">Tema do Dia</h3>
-                    <p id="dev-tema" class="text-xl font-bold leading-tight"></p>
-                </div>
-                <div class="bg-white/5 p-6 rounded-2xl space-y-4 border border-white/5">
-                    <div><span class="text-[#E8B923] font-bold text-[10px] uppercase block mb-1">🌱 Introdução</span><p id="dev-intro" class="text-gray-300 text-sm"></p></div>
-                    <div class="border-t border-white/10 pt-4"><span class="text-[#E8B923] font-bold text-[10px] uppercase block mb-1">📖 Ensino</span><p id="dev-ensino" class="text-gray-300 text-sm italic"></p></div>
-                    <div class="border-t border-white/10 pt-4"><span class="text-[#E8B923] font-bold text-[10px] uppercase block mb-1">💡 Aplicação</span><p id="dev-aplicacao" class="text-gray-300 text-sm"></p></div>
-                </div>
-                <div class="bg-[#E8B923] p-6 rounded-2xl text-[#000814]">
-                    <p id="dev-versiculo" class="font-black italic text-lg mb-1"></p>
-                    <p id="dev-ref" class="text-xs font-bold uppercase opacity-70"></p>
-                </div>
-                <button onclick="compartilharDevocional()" class="w-full bg-[#25D366] text-white py-4 rounded-xl font-black text-[11px] uppercase flex justify-center items-center gap-2 shadow-lg">
-                    📲 COMPARTILHAR NO WHATSAPP
-                </button>
+            <div class="bg-[#E8B923] p-6 rounded-2xl text-[#000814] mb-6 shadow-xl text-center font-black italic">
+                <p id="dev-versiculo" class="text-lg leading-tight mb-2"></p>
+                <p id="dev-ref" class="text-[10px] uppercase opacity-70"></p>
             </div>
-        </div>
-
-        <div id="quiz" class="section text-center">
-            <div class="bg-white/5 p-6 rounded-3xl border border-[#E8B923]/30 shadow-2xl">
-                <h2 id="medalha" class="text-[#E8B923] font-black text-xl mb-4 uppercase italic">Iniciante</h2>
-                <div id="pergunta" class="text-lg font-bold mb-6 italic leading-tight">Carregando desafios...</div>
-                <div id="alternativas" class="space-y-3"></div>
-                <div class="mt-6 space-y-2 border-t border-white/10 pt-4">
-                    <button onclick="pularPergunta()" class="w-full bg-white/10 border border-white/20 py-3 rounded-xl text-[10px] font-bold uppercase">⏭️ Pular (50 moedas)</button>
-                </div>
-            </div>
-        </div>
-
-        <div id="doar" class="section text-center">
-            <div class="bg-gradient-to-b from-[#15803D]/30 to-transparent p-6 rounded-3xl border border-[#15803D]/50 mb-8">
-                <h2 class="text-[#E8B923] text-2xl font-black uppercase italic mb-1">Apoio Missionário</h2>
-            </div>
-            <div class="space-y-6">
-                <div class="bg-[#15803D] p-6 rounded-3xl border-2 border-[#E8B923] shadow-2xl">
-                    <h3 class="text-white text-xl font-black mb-2 uppercase italic">Apoio Mensal</h3>
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScvuR68w5vxsJDBw-Y1ZuXDv78AO7UO-rTYtd3rHEoguYHpjg/viewform?usp=sharing" target="_blank" class="block w-full bg-[#E8B923] text-[#000814] py-4 rounded-xl font-black uppercase text-xs">🤝 FAZER COMPROMISSO</a>
-                </div>
-                <div class="bg-white/5 p-6 rounded-3xl border border-white/10">
-                    <h3 class="text-[#E8B923] text-sm font-black mb-2 italic uppercase">Oferta Única (Pix)</h3>
-                    <p class="text-xl font-mono font-bold mb-4">05475258856</p>
-                    <button onclick="navigator.clipboard.writeText('05475258856'); alert('Chave PIX copiada!')" class="w-full border border-[#15803D] text-[#15803D] py-3 rounded-xl text-[10px] font-bold uppercase">📋 COPIAR CHAVE PIX</button>
-                </div>
-            </div>
+            <button onclick="compartilharDevocional()" class="w-full bg-[#25D366] py-4 rounded-xl font-black text-xs uppercase flex items-center justify-center gap-2 shadow-lg">📲 Compartilhar no WhatsApp</button>
         </div>
 
         <div id="projeto" class="section text-center">
-            <h2 class="text-[#E8B923] text-xl font-black uppercase mb-6 italic">Instalação</h2>
+            <h2 class="text-[#E8B923] font-black uppercase mb-6">Instalação</h2>
             <div class="space-y-4 text-left">
-                <div class="bg-white/5 p-5 rounded-2xl border border-white/10">
-                    <h3 class="text-[#E8B923] font-bold text-sm mb-2 italic">🤖 ANDROID</h3>
-                    <p class="text-xs text-gray-300">Toque em (⋮) e escolha "Instalar aplicativo".</p>
-                </div>
-                <div class="bg-white/5 p-5 rounded-2xl border border-white/10">
-                    <h3 class="text-[#E8B923] font-bold text-sm mb-2 italic">🍎 IPHONE</h3>
-                    <p class="text-xs text-gray-300">Toque em "Compartilhar" e escolha "Adicionar à Tela de Início".</p>
-                </div>
+                <div class="card"><h3 class="text-[#E8B923] font-bold text-sm mb-2">🤖 ANDROID</h3><p class="text-xs text-gray-300 leading-relaxed">Toque nos <b>três pontinhos (⋮)</b> e selecione <b>"Instalar aplicativo"</b>.</p></div>
+                <div class="card"><h3 class="text-[#E8B923] font-bold text-sm mb-2">🍎 IPHONE</h3><p class="text-xs text-gray-300 leading-relaxed">Toque em <b>Compartilhar</b> e escolha <b>"Adicionar à Tela de Início"</b>.</p></div>
             </div>
-            <button onclick="showSection('home')" class="w-full bg-[#15803D] text-white py-4 rounded-xl font-black uppercase text-xs mt-8">VOLTAR</button>
+            <button onclick="showSection('home')" class="mt-8 w-full bg-white/10 py-3 rounded-xl font-bold text-xs uppercase">Voltar</button>
+        </div>
+
+        <div id="doar" class="section text-center">
+            <h2 class="text-[#E8B923] font-black uppercase mb-6">Apoie a Missão</h2>
+            <div class="grid gap-4">
+                <button onclick="window.location.href='https://wa.me/5591981881471?text=Olá! Quero fazer uma oferta única. Chave PIX: 05475258856'" class="bg-[#E8B923] text-[#000814] p-6 rounded-2xl font-black text-sm shadow-lg">🎁 OFERTA ÚNICA (PIX)<br><span class="text-[10px]">Chave: 05475258856</span></button>
+                <button onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScvuR68w5vxsJDBw-Y1ZuXDv78AO7UO-rTYtd3rHEoguYHpjg/viewform?usp=dialog'" class="bg-[#15803D] text-white p-6 rounded-2xl font-black text-sm shadow-lg">🤝 APOIO MENSAL<br><span class="text-[10px]">Torne-se um mantenedor</span></button>
+            </div>
         </div>
     </main>
 
     <nav id="navbar">
-        <button onclick="showSection('home')" class="nav-btn"><span class="text-xl">🏠</span><span class="nav-active">Início</span></button>
-        <button onclick="showSection('projeto')" class="nav-btn"><span class="text-xl">🛠️</span><span>Projeto</span></button>
-        <button onclick="showSection('palavra')" class="nav-btn"><span class="text-xl">📖</span><span>Palavra</span></button>
-        <button onclick="showSection('quiz')" class="nav-btn"><span class="text-xl">🎯</span><span>Desafio</span></button>
-        <button onclick="showSection('doar')" class="nav-btn"><span class="text-xl">❤️</span><span>Doar</span></button>
+        <button onclick="showSection('home')" class="nav-btn nav-active">🏠<span>Início</span></button>
+        <button onclick="showSection('projeto')" class="nav-btn">🛠️<span>Instalar</span></button>
+        <button onclick="showSection('palavra')" class="nav-btn">📖<span>Palavra</span></button>
+        <button onclick="showSection('doar')" class="nav-btn">❤️<span>Doar</span></button>
     </nav>
 
     <script>
-        let perguntas = []; let index = 0; let pontuacao = 0; let moedas = 0; let vidas = 3;
-
-        function showSection(id) {
-            document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
-            document.getElementById(id).classList.add('active');
-            document.querySelectorAll('.nav-btn span:last-child').forEach(s => s.classList.remove('nav-active'));
-            if(event && event.currentTarget) event.currentTarget.querySelector('span:last-child').classList.add('nav-active');
-            window.scrollTo(0,0);
-        }
-
-        async function initQuiz() {
-            try {
-                const res = await fetch('questions.json');
-                perguntas = await res.json();
-                if (perguntas.length > 0) mostrarPergunta();
-            } catch(e) { console.error("Erro no quiz"); }
-        }
-
-        function mostrarPergunta() {
-            const q = perguntas[index];
-            if(!q) return;
-            document.getElementById("pergunta").innerText = q.question;
-            const container = document.getElementById("alternativas");
-            container.innerHTML = "";
-            q.options.forEach((opt, i) => {
-                const btn = document.createElement("button");
-                btn.innerText = opt; btn.className = "quiz-btn";
-                btn.onclick = () => verificarResposta(i, q.correct);
-                container.appendChild(btn);
-            });
-        }
-
-        function verificarResposta(r, c) {
-            if (r === c) { pontuacao++; moedas += 10; index++; mostrarPergunta(); }
-            else { vidas--; if (vidas <= 0) { alert("Vidas esgotadas!"); index = 0; vidas = 3; mostrarPergunta(); } }
-            document.getElementById("moedas").innerText = moedas;
-            document.getElementById("vidas").innerText = vidas;
-            document.getElementById("pontos").innerText = pontuacao;
-        }
-
         async function carregarDevocional() {
             try {
-                const res = await fetch('devocionais.json');
-                const dados = await res.json();
+                const resp = await fetch('devocionais.json');
+                const devocionais = await resp.json();
                 const hoje = new Date();
-                const d = dados[(hoje.getDate() - 1) % dados.length];
-                document.getElementById("devocional-data").innerText = hoje.toLocaleDateString('pt-BR', { weekday: 'long', day: 'numeric', month: 'long' });
+                const inicio = new Date(hoje.getFullYear(), 0, 0);
+                const dia = Math.floor((hoje - inicio) / 86400000) - 1;
+                const d = devocionais[dia] || devocionais[0];
+                document.getElementById("dev-data").innerText = hoje.toLocaleDateString('pt-BR', {day:'2-digit', month:'long'});
                 document.getElementById("dev-tema").innerText = d.tema;
                 document.getElementById("dev-intro").innerText = d.introducao;
                 document.getElementById("dev-ensino").innerText = d.ensino;
                 document.getElementById("dev-aplicacao").innerText = d.aplicacao;
                 document.getElementById("dev-versiculo").innerText = `"${d.versiculo}"`;
                 document.getElementById("dev-ref").innerText = d.referencia;
-            } catch (e) { console.error("Erro no devocional"); }
+            } catch(e) { console.error("Erro ao carregar devocional:", e); }
         }
 
         function compartilharDevocional() {
             const tema = document.getElementById("dev-tema").innerText;
             const verso = document.getElementById("dev-versiculo").innerText;
             const ref = document.getElementById("dev-ref").innerText;
-            const msg = `*Devocional Missão Peru*\n\n*Tema:* ${tema}\n\n${verso}\n(_${ref}_)\n\nLeia no App:\n${window.location.href}`;
-            window.open(`https://api.whatsapp.com/send?text=${encodeURIComponent(msg)}`, '_blank');
+            const msg = encodeURIComponent(`*Devocional Missão Peru*\n\n*Tema:* ${tema}\n\n${verso}\n(${ref})\n\nLeia mais no App: ${window.location.href}`);
+            window.open(`https://api.whatsapp.com/send?text=${msg}`, '_blank');
         }
 
-        window.onload = () => { initQuiz(); carregarDevocional(); };
+        function showSection(id) {
+            document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
+            document.getElementById(id).classList.add('active');
+            document.querySelectorAll('.nav-btn').forEach(b => b.classList.remove('nav-active'));
+            event.currentTarget.classList.add('nav-active');
+            window.scrollTo(0,0);
+        }
+        window.onload = () => { carregarDevocional(); };
     </script>
 </body>
 </html>
