--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <div id="home" class="section active text-center">
             <div class="card mb-6">
                 <h2 class="text-[#E8B923] font-black uppercase mb-4">Apresentação</h2>
-                <p class="text-sm text-gray-300">Conectando corações à obra missionária em Tacna.</p>
+                <p class="text-sm text-gray-300 italic mb-4">Conectando corações à obra missionária em Tacna.</p>
+                <button onclick="showSection('projeto')" class="w-full bg-[#15803D] py-4 rounded-xl font-black text-xs uppercase shadow-lg">Como Instalar o App</button>
             </div>
-            <button onclick="showSection('projeto')" class="w-full bg-[#15803D] py-4 rounded-xl font-black text-xs uppercase shadow-lg">Como Instalar o App</button>
         </div>
 
         <div id="palavra" class="section text-center">
@@ -54,8 +54,8 @@
         <div id="projeto" class="section text-center">
             <h2 class="text-[#E8B923] font-black uppercase mb-6">Instalação</h2>
             <div class="space-y-4 text-left">
-                <div class="card"><h3 class="text-[#E8B923] font-bold text-sm mb-2">🤖 ANDROID</h3><p class="text-xs text-gray-300 leading-relaxed">Toque nos <b>três pontinhos (⋮)</b> e selecione <b>"Instalar aplicativo"</b>.</p></div>
-                <div class="card"><h3 class="text-[#E8B923] font-bold text-sm mb-2">🍎 IPHONE</h3><p class="text-xs text-gray-300 leading-relaxed">Toque em <b>Compartilhar</b> e escolha <b>"Adicionar à Tela de Início"</b>.</p></div>
+                <div class="card"><h3 class="text-[#E8B923] font-bold text-sm mb-2">🤖 ANDROID</h3><p class="text-xs text-gray-300">Toque em (⋮) e selecione <b>"Instalar aplicativo"</b>.</p></div>
+                <div class="card"><h3 class="text-[#E8B923] font-bold text-sm mb-2">🍎 IPHONE</h3><p class="text-xs text-gray-300">Toque em <b>Compartilhar</b> e escolha <b>"Adicionar à Tela de Início"</b>.</p></div>
             </div>
             <button onclick="showSection('home')" class="mt-8 w-full bg-white/10 py-3 rounded-xl font-bold text-xs uppercase">Voltar</button>
         </div>
@@ -63,7 +63,7 @@
         <div id="doar" class="section text-center">
             <h2 class="text-[#E8B923] font-black uppercase mb-6">Apoie a Missão</h2>
             <div class="grid gap-4">
-                <button onclick="window.location.href='https://wa.me/5591981881471?text=Olá! Quero fazer uma oferta única. Chave PIX: 05475258856'" class="bg-[#E8B923] text-[#000814] p-6 rounded-2xl font-black text-sm shadow-lg">🎁 OFERTA ÚNICA (PIX)<br><span class="text-[10px]">Chave: 05475258856</span></button>
+                <button onclick="window.location.href='https://wa.me/5591981881471?text=Olá! Quero fazer uma oferta única via PIX. Chave: 05475258856'" class="bg-[#E8B923] text-[#000814] p-6 rounded-2xl font-black text-sm shadow-lg">🎁 OFERTA ÚNICA (PIX)<br><span class="text-[10px]">Chave: 05475258856</span></button>
                 <button onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScvuR68w5vxsJDBw-Y1ZuXDv78AO7UO-rTYtd3rHEoguYHpjg/viewform?usp=dialog'" class="bg-[#15803D] text-white p-6 rounded-2xl font-black text-sm shadow-lg">🤝 APOIO MENSAL<br><span class="text-[10px]">Torne-se um mantenedor</span></button>
             </div>
         </div>
