--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Missão Peru</title>
-    <link rel="manifest" href="manifest.json">
+    <!-- <link rel="manifest" href="manifest.json"> -->
     <meta name="theme-color" content="#15803D">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -114,3 +114,4 @@
     </script>
 </body>
 </html>
+
