--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div id="doar" class="section text-center">
             <h2 class="text-[#E8B923] font-black uppercase mb-6">Apoie a Missão</h2>
             <div class="grid gap-4">
-                <button onclick="window.location.href='https://wa.me/5516997594551?text=Olá! Quero fazer uma oferta única via PIX. Chave: 05475258856'" class="bg-[#E8B923] text-[#000814] p-6 rounded-2xl font-black text-sm shadow-lg">🎁 OFERTA ÚNICA (PIX)<br><span class="text-[10px]">Chave: 05475258856</span></button>
+                onclick="navigator.clipboard.writeText('05475258856'); window.location.href='gratidao-pix.html'"
                 <button onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScvuR68w5vxsJDBw-Y1ZuXDv78AO7UO-rTYtd3rHEoguYHpjg/viewform?usp=dialog'" class="bg-[#15803D] text-white p-6 rounded-2xl font-black text-sm shadow-lg">🤝 APOIO MENSAL<br><span class="text-[10px]">Torne-se um mantenedor</span></button>
             </div>
         </div>
@@ -114,5 +114,6 @@
     </script>
 </body>
 </html>
+
 
 
