--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
         <div id="doar" class="section text-center">
             <h2 class="text-[#E8B923] font-black uppercase mb-6">Apoie a Missão</h2>
             <div class="grid gap-4">
-                onclick="navigator.clipboard.writeText('05475258856'); window.location.href='gratidao-pix.html'"
+        <button 
+onclick="navigator.clipboard.writeText('05475258856'); window.location.href='gratidao-pix.html';" 
+class="bg-[#E8B923] text-[#000814] py-4 rounded-xl font-black uppercase text-xs shadow-lg w-full">
+🪙 OFERTA ÚNICA (PIX)
+</button>
                 <button onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScvuR68w5vxsJDBw-Y1ZuXDv78AO7UO-rTYtd3rHEoguYHpjg/viewform?usp=dialog'" class="bg-[#15803D] text-white p-6 rounded-2xl font-black text-sm shadow-lg">🤝 APOIO MENSAL<br><span class="text-[10px]">Torne-se um mantenedor</span></button>
             </div>
         </div>
@@ -114,6 +118,7 @@
     </script>
 </body>
 </html>
+
 
 
 
